crates/elenchus-parser/tests/snapshots/errors__premise_implication_missing_then.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        PREMISE wings_need_bone:\n            WHEN Creature.A has flying\n        CHECK Creature.A\n        \"#)"
---
RESULT: 1 syntax error

[1/1] line 4, col 9
   |         CHECK Creature.A
   |         ^^^^^^^^^^^^^^^^
   problem : expected THEN to complete the WHEN ... THEN implication
   syntax  : THEN <literal>
   example : THEN motor uses fast_path
